see_test/tree-sitter-cmut/corpus/expression.txt

========
Function arguments
========

f()
f(1)
f(1, 2)
f(1, 2, 3)

---

(source_file
    (call_expression
        name: (identifier)
        arguments: (argument_list))
    (call_expression
        name: (identifier)
        arguments: (argument_list (number)))
    (call_expression
        name: (identifier)
        arguments: (argument_list (number) (number)))
    (call_expression
        name: (identifier)
        arguments: (argument_list (number) (number) (number))))

=====
Argument expectation
=====

f("A" => "B", "C")

---

(source_file
    (call_expression
    name: (identifier)
    arguments: (argument_list
        (expectation
            input: (string)
            expect: (string))
        (string))))

=====
Dereferenced argument expectaion
=====

f(&1 => 2)

---

(source_file
    (call_expression
        name: (identifier)
        arguments: (argument_list
            (expectation
                input: (address
                    (number))
                expect: (number)))))

=====
Return expectation
=====

f() => 1

---

(source_file
    (call_expression
    name: (identifier)
    arguments: (argument_list)
    return: (number)))

====
Inbox test
====

===
Group1

-subgroup1

<%

%as

%>

---

(source_file

 )
