see_test/tree-sitter-cmut/corpus/types.txt
=======
Number
=======

f(1)
f(-1)

---

(source_file
  (call_expression
    name: (identifier)
    arguments: (argument_list (number)))
  (call_expression
    name: (identifier)
    arguments: (argument_list (number))))

====
Char
====

f('')
f('A')

---
(source_file
  (call_expression
    name: (identifier)
    arguments: (argument_list (char)))
  (call_expression
    name: (identifier)
    arguments: (argument_list (char))))

======
String
======

f("")
f("A")
f("ABC")

---

(source_file
  (call_expression
    name: (identifier)
    arguments: (argument_list (string)))
  (call_expression
    name: (identifier)
    arguments: (argument_list (string)))
  (call_expression
    name: (identifier)
    arguments: (argument_list (string))))

=====
Array
=====

<% Anything here will be inserted at the beggining of the file %>

- subgroup name
f([])



- test


f(2)

f(["b" => "c", 1 => "e"])
f(2, 3)


- test 2
f() => 1



---

(source_file
    (call_expression
    name: (identifier)
    arguments: (argument_list (array)))
  (call_expression
    name: (identifier)
    arguments: (argument_list
      (array
        (number) (number))))
  (call_expression
    name: (identifier)
    arguments: (argument_list
      (array
        (expectation
          input: (string)
          expect: (string))
        (expectation
          input: (number)
          expect: (string))))))
